--- a/ami-update.yaml
+++ b/ami-update.yaml
@@ -8,6 +8,10 @@
     profile: 'default' # replace with your AWS CLI profile name
 
   tasks:
+  - name: Run a command with become su
+    become: yes
+    become_method: su
+    
   - name: Get latest AMI ID
     shell: >
       aws --region {{ region }} --profile {{ profile }} ec2 describe-images --owners amazon --filters 'Name=name,Values=amzn2-ami-hvm-2.0.????????-x86_64-gp2' 'Name=state,Values=available' --query 'sort_by(Images, &CreationDate)[-1].[ImageId]' --output text
