--- a/ami-update.yaml
+++ b/ami-update.yaml
@@ -26,7 +26,7 @@
 
     - name: Print nodegroup description
       debug:
-        msg: "{{ nodegroup_description.stdout | from_json }}"
+        msg: "{{ nodegroup_description.stdout }}"
 
     - name: Extract launch template ID and version
       set_fact:
